# QML-Challenges

./: .gitattributes  LICENSE  README.md
1_BusinessCard/: CMakeLists.txt  CustomBorderedImage.qml  CustomLabel.qml  CustomLabelWithIcon.qml  Main.qml  QtWebLinkLogo.qml
2_OrderingCard/: CMakeLists.txt  Main.qml
